# SPL_Work_Num_1

./: CMakeLists.txt  README.md  makefile
Work1 - first_Assignment/include/: Graph.h  SelectionPolicy.h
Work1 - first_Assignment/src/: SelectionPolicy.cpp  Simulation.cpp
include/: Agent.h  Coalition.h  Graph.h  JoinPolicy.h  Party.h  SelectionPolicy.h  Simulation.h
src/: Agent.cpp  Coalition.cpp  EdgeWeightSelectionPolicy.cpp  Graph.cpp  LastOfferJoinPolicy.cpp  MandatesJoinPolicy.cpp  MandatesSelectionPolicy.cpp  Party.cpp  SelectionPolicy.cpp  Simulation.cpp  main.cpp
